Refactor security configuration and add CORS support: update SecurityConfig to allow preflight requests and configure CORS settings; create WebConfig for centralized CORS mapping; clean up service interfaces by removing unnecessary comments and consolidating methods.